src/assets/css/main.css
html {
	background-color: #2a323d;
	font-family: sans-serif;
	font-size: 20px;
	height: calc( 100% - 10px );
	user-select: none;
}

body {
	background: transparent;
	height: 100%;
	margin: 0;
	padding: 0;
}

a {
	color: #5464d4;
	cursor: pointer;
	text-decoration: none;
}

a:focus {
	color: #a3c9ef;
	outline: none;
}

input, .checkbox-label {
	margin-bottom: 24px;
	margin-top: 8px;
}

input[type="text"], input[type="number"], input[type="search"], select {
	background: none;
	border: none;
	border-bottom: solid 2px #969696;
	color: #FFF;
	font-size: 20px;
	transition: border 0.3s;
	width: calc( 100% - 8px );
}

input[type="text"]:focus, input[type="number"]:focus, input[type="search"]:focus, select:focus {
	border-bottom: solid 2px #c9c9c9;
	outline: none;
}

button {
	background: none;
	border: none;
	color: #5464d4;
	cursor: pointer;
	font-size: 20px;
	margin: 10px;
	text-shadow: 0 1px 1px #222;
    text-align: left;
}

button:focus {
	color: #a3c9ef;
	outline: none;
}

select option {
	color: #000;
}

.container {
	background-color: #242a33;
	box-shadow: 2px 2px 3px #222;
	color: #fff;
	margin: 10px;
	padding: 10px;
}

.editormain {
	background-color: #2a323d;
	height: calc( 100% - 90px );
	position: relative;
}

.editormain button {
	position: absolute;
	z-index: 1;
}

body > .editormain {
	height: calc( 100% - 490px );
}

.main {
	height: calc( 100% - 340px );
	padding: 0;
	width: calc( 100% - 450px );
}

.bottom {
	height: 250px;
	margin-bottom: 0;
	width: calc( 100% - 470px );
	min-width: 234px;
}

.side {
	height: calc( 100% - 40px );
	position: fixed;
	right: 0;
	top: 0;
	width: 400px;
}

.s2, .s4, .s5, .s8 {
	box-sizing: border-box;
	float: left;
	height:  100%;
	left: auto;
	margin-left: auto;
	right: auto;
}

.s2 {
	width: 192px;
}

.s4 {
	width: calc(50% - 100px);
}

.s5 {
	width: 50%;
}

.s8 {
	width: calc(100% - 200px);
}

.v5 {
	height: 50%;
}

.status {
	height: 20px;
	text-align: center;
	width: calc( 100% - 470px );
	overflow-y: overlay;
}

.status::-webkit-scrollbar {
	display: none;
}

.buttons {
	border-right: solid 4px #2a323d;
	margin-right: 8px;
}

.sidebuttons button {
	height: 25px;
	width: 25px;
}

.b5 button {
	padding: 0;
	width: unset;
}

.b3 button {
	width: calc( 33% - 23px );
}

.vbar {
	border-bottom: solid 4px #2a323d;
	height: calc( 50% - 8px);
	margin-bottom: 8px;
}

.scroll {
	overflow-x: hidden;
	overflow-y: auto;
}

.char, .emote, .babble {
	background-color: #2a323d;
	color: #fff;
	cursor: pointer;
	display: inline-block;
	margin-bottom: 6px;
}

.emote:focus, .babble:focus {
	color: #fff;
}

.char {
	background-position: center;
	background-repeat: no-repeat;
	background-size: contain;
	height: calc( 33% - 8px );
	position: relative;
	width: calc( 33% - 6px );
}

.emote {
	background-color: #2a323d;
	background-position: center;
	background-repeat: no-repeat;
	background-size: contain;
	box-shadow: 0 313px rgba(256, 0, 0, 0.2) inset;
	height: calc( 25% - 11px );
	position: relative;
	width: calc( 25% - 4.2px );
}

.babble {
	height: calc( 25% - 4px );
	position: relative;
	width: 100%;
}

.asset {
	background-color: #2a323d;
	color: #fff;
	cursor: pointer;
	display: inline-block;
	height: 120px;
	margin: 4px 4px 0 4px;
	position: relative;
	width: 120px;
}

.contain {
	object-fit: contain;
}

.charlist {
	height: calc( 100% - 100px );
}

.assetlist {
	height: calc( 100% - 114px );
}

.charselector .char {
	height: 50px;
	min-width: 75px;
  margin-bottom: 0;
  margin-right: 6px;
}

.editorpanel {
	height: calc( 100% - 90px );
}

.editorpanel .char {
	height: 120px;
	padding: 0;
	width: 120px;
}

.editorpanel .charlist {
	height: calc( 100% - 31px );
}

.editorpanel .emote, .editorpanel .babble {
	height: 9%;
	min-height: 28px;
}

.editorpanel .emote {
	width: calc( 25% - 10px );
	margin: 4px 1px;
}

.editorpanel .babble {
	width: calc( 100% - 20px );
	margin: 4px 10px;
}

.editorpanel .emotes {
	margin: 4px 4px 4px 13px;
	outline: #2a323d solid 4px;
	width: 361.5px;
	padding: 4px 0 4px 13px;
}

.editorpanel .babble-emotes {
	margin: 6px 4px 6px 13px;
	outline: #2a323d solid 4px;
	width: 361.5px;
	padding: 6px 0 6px 0px;
}

.small {
	font-size: 16px;
}

.available {
	box-shadow: none !important;
}

.disabled {
	box-shadow: 0 313px rgba(256, 0, 0, 0.2) inset;
}

.selected {
	background-color: #333c4a;
}

.fillbutton {
	width: calc( 100% - 20px );
}

.desc{
	background-color: #000;
	bottom: 0;
	color: #fff;
	font-size: 16px;
	left: 0;
	opacity: 0.5;
	overflow: hidden;
	pointer-events: none;
	position: absolute;
	text-align: center;
	width: 100%;
	word-wrap: break-word;
}

.emote .desc {
	top: 0;
	bottom: unset;
}

.hotkey {
	left: 4px;
	top: 4px;
	position: absolute;
	pointer-events: none;
}

.emote .hotkey {
	bottom: 4px;
	top: unset;
}

.checkbox {
	opacity: 0;
	position: absolute;
}

.checkbox, .checkbox-label {
	cursor: pointer;
	display: inline-block;
	margin: 5px;
	vertical-align: middle;
}

.checkbox-label {
	color: #5464d4;
	font-family: sans-serif;
	line-height: 28px;
	position: relative;
}

.checkbox + .checkbox-label:before {
	background: #242a33;
	border: 4px solid #333c4a;
	content: '';
	display: inline-block;
	height: 20px;
	margin-right: 10px;
	padding: 2px;
	text-align: center;
	vertical-align: middle;
	width: 20px;
}

.checkbox:checked + .checkbox-label:before {
	background: #333c4a;
	box-shadow: inset 0 0 0 4px #242a33;
}


.checkbox:focus + .checkbox-label, .checkbox:active + .checkbox-label {
	color: #a3c9ef;
	outline: none;
}

.flipswitch {
	bottom: 8px;
	margin: 16px auto 0;
	position: relative;
	width: 120px;
}
.flipswitch input[type=checkbox] {
	display: none;
}
.flipswitch-label {
	border: 4px solid #333c4a;
	cursor: pointer;
	display: block;
	overflow: hidden;
}
.flipswitch-inner {
	margin-left: -100%;
	transition: margin 0.3s ease-in 0s;
	width: 200%;
}
.flipswitch-inner:before, .flipswitch-inner:after {
	box-sizing: border-box;
	color: white;
	float: left;
	font-family: Trebuchet, Arial, sans-serif;
	font-size: 18px;
	font-weight: bold;
	height: 24px;
	line-height: 24px;
	padding: 0;
	width: 50%;
}
.flipswitch-inner:before {
	color: #5464d4;
	content: "eyes";
	padding-left: 12px;
}
.flipswitch-inner:after {
	color: #5464d4;
	content: "mouth";
	padding-right: 12px;
	text-align: right;
}
.flipswitch-switch {
	background: #242a33;
	border: 4px solid #333c4a;
	bottom: 0;
	margin: -3.5px;
	position: absolute;
	right: 93px;
	top: 0;
	transition: all 0.3s ease-in 0s;
	width: 31px;
}
.flipswitch-cb:checked + .flipswitch-label .flipswitch-inner {
	margin-left: 0;
}
.flipswitch-cb:checked + .flipswitch-label .flipswitch-switch {
	right: 0;
}

.highlight {
	font-weight: bold;
}

.modal {
	display: none;
}

.vanilla-modal .modal {
	display: block;
	position: fixed;
	content: "";
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background: rgba(0, 0, 0, 0.6);
	z-index: -1;
	opacity: 0;
	transition: opacity 0.2s, z-index 0s 0.2s;
	text-align: center;
	overflow: hidden;
	overflow-y: auto;
	white-space: nowrap;
	-webkit-overflow-scrolling: touch;
}

.vanilla-modal .modal > * {
	display: inline-block;
	white-space: normal;
	vertical-align: middle;
	text-align: left;
}

.vanilla-modal .modal:before {
	display: inline-block;
	overflow: hidden;
	width: 0;
	height: 100%;
	vertical-align: middle;
	content: "";
}

.vanilla-modal.modal-visible .modal {
	z-index: 99;
	opacity: 1;
	transition: opacity 0.2s;
}

.modal-inner {
	width: 90%;
	padding: 10px;
	background-color: #2a323d;
	position: relative;
	overflow: hidden;
	max-width: 790px;
	max-height: 90%;
	overflow-x: hidden;
	overflow-y: auto;
	z-index: -1;
	opacity: 0;
	transform: scale(0);
	transition: opacity 0.2s, transform 0.2s, z-index 0s 0.2s;
}
.modal-visible .modal-inner {
	z-index: 100;
	opacity: 1;
	transform: scale(1);
	transition: opacity 0.2s, transform 0.2s;
}

.dropdown:hover .dropdown-content {
	display: block;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #2a323d;
    min-width: 240px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.dropdown-content a {
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.dropdown-content a:hover {
	background-color: #333c4a;
}

.autocrop-assets {
	overflow-y: auto;
	max-height: 500px;
}

.autocrop-assets .asset {
	width: 120px;
	height: 120px;
	box-shadow: 0 313px rgba(255, 0, 0, 0.2) inset;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  cursor: unset;
}

.import-assets .asset {
	width: 120px;
	height: 120px;
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center;
}

.import-puppets .char {
	width: 120px;
	height: 120px;
    margin: 4px 4px 0 4px;
}

